# message-postgis-ingester

./: README.md  pyproject.toml
message_postgis_ingester/: __init__.py  db-and-mapfile-handle.yaml
message_postgis_ingester/tests/: test_message_postgis_ingester.py
