[project]
name = "message-postgis-ingester"
dynamic = ["version"]
dependencies = ["posttroll>=1.10.0"]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2", 'setuptools_scm_git_archive']
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project.scripts]
sub_and_ingest = "message_postgis_ingester:main"

[tool.ruff]
select = ["E", "W", "F", "I", "D", "S", "B", "A", "PT", "Q", "TID"]
ignore = ["B905"]  # only available from python 3.10
line-length = 120

[tool.ruff.per-file-ignores]
"message_postgis_ingester/tests/*" = ["S101"]  # assert allowed in tests

[tool.ruff.pydocstyle]
convention = "google"
